--- a/Innobedded.KrankenHause.Data/Innobedded.KrankenHause.Data.csproj
+++ b/Innobedded.KrankenHause.Data/Innobedded.KrankenHause.Data.csproj
@@ -55,24 +55,50 @@
     <Compile Include="Entities\Doctor.cs" />
     <Compile Include="Entities\Education.cs" />
     <Compile Include="Entities\Fach.cs" />
+    <Compile Include="Entities\Insurance.cs" />
     <Compile Include="Entities\Job.cs" />
+    <Compile Include="Entities\Klinik.cs" />
+    <Compile Include="Entities\KlinikType.cs" />
     <Compile Include="Entities\Krank.cs" />
+    <Compile Include="Entities\Reception.cs" />
     <Compile Include="Entities\Sex.cs" />
-    <Compile Include="Migrations\202105281915338_init.cs" />
-    <Compile Include="Migrations\202105281915338_init.designer.cs">
-      <DependentUpon>202105281915338_init.cs</DependentUpon>
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Migrations\202105281942110_init_Doctors_Krank.cs" />
+    <Compile Include="Migrations\202105281942110_init_Doctors_Krank.designer.cs">
+      <DependentUpon>202105281942110_init_Doctors_Krank.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105281947247_Krank_Tables.cs" />
+    <Compile Include="Migrations\202105281947247_Krank_Tables.designer.cs">
+      <DependentUpon>202105281947247_Krank_Tables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105282025265_Klinik_tables.cs" />
+    <Compile Include="Migrations\202105282025265_Klinik_tables.designer.cs">
+      <DependentUpon>202105282025265_Klinik_tables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105282057446_UsersTables_and_ReceptionTable.cs" />
+    <Compile Include="Migrations\202105282057446_UsersTables_and_ReceptionTable.designer.cs">
+      <DependentUpon>202105282057446_UsersTables_and_ReceptionTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202105281915338_init.resx">
-      <DependentUpon>202105281915338_init.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202105281942110_init_Doctors_Krank.resx">
+      <DependentUpon>202105281942110_init_Doctors_Krank.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105281947247_Krank_Tables.resx">
+      <DependentUpon>202105281947247_Krank_Tables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105282025265_Klinik_tables.resx">
+      <DependentUpon>202105282025265_Klinik_tables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105282057446_UsersTables_and_ReceptionTable.resx">
+      <DependentUpon>202105282057446_UsersTables_and_ReceptionTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
