--- a/Innobedded.KrankenHause.Data/Innobedded.KrankenHause.Data.csproj
+++ b/Innobedded.KrankenHause.Data/Innobedded.KrankenHause.Data.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Entities\Insurance.cs" />
     <Compile Include="Entities\Job.cs" />
     <Compile Include="Entities\Klinik.cs" />
+    <Compile Include="Entities\KlinikService.cs" />
+    <Compile Include="Entities\KlinikServicesReception.cs" />
     <Compile Include="Entities\KlinikType.cs" />
     <Compile Include="Entities\Krank.cs" />
     <Compile Include="Entities\Reception.cs" />
@@ -79,6 +81,10 @@
     <Compile Include="Migrations\202105282057446_UsersTables_and_ReceptionTable.designer.cs">
       <DependentUpon>202105282057446_UsersTables_and_ReceptionTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105282114404_ServiceTable_Und_ServiceReceptionTables.cs" />
+    <Compile Include="Migrations\202105282114404_ServiceTable_Und_ServiceReceptionTables.designer.cs">
+      <DependentUpon>202105282114404_ServiceTable_Und_ServiceReceptionTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -98,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105282057446_UsersTables_and_ReceptionTable.resx">
       <DependentUpon>202105282057446_UsersTables_and_ReceptionTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105282114404_ServiceTable_Und_ServiceReceptionTables.resx">
+      <DependentUpon>202105282114404_ServiceTable_Und_ServiceReceptionTables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
