--- a/Innobedded.KrankenHause.Domain/Innobedded.KrankenHause.Domain.csproj
+++ b/Innobedded.KrankenHause.Domain/Innobedded.KrankenHause.Domain.csproj
@@ -53,14 +53,18 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IDoctorRepository.cs" />
+    <Compile Include="Repositories\IEducationRepository.cs" />
     <Compile Include="Repositories\IFachRepository.cs" />
     <Compile Include="Repositories\IGenericRepositoy.cs" />
     <Compile Include="Repositories\IKlinikServicesRepository.cs" />
+    <Compile Include="Repositories\ISexRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="Services\DoctorRepository.cs" />
+    <Compile Include="Services\EducationRepository.cs" />
     <Compile Include="Services\FachRepository.cs" />
     <Compile Include="Services\GenericRepositoy.cs" />
     <Compile Include="Services\KlinikServicesRepository.cs" />
+    <Compile Include="Services\SexRepository.cs" />
     <Compile Include="Services\UserRepository.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="ViewModels\DoctorsViewModel.cs" />
