--- a/Innobedded.KrankenHause.Domain/Innobedded.KrankenHause.Domain.csproj
+++ b/Innobedded.KrankenHause.Domain/Innobedded.KrankenHause.Domain.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Repositories\IGenericRepositoy.cs" />
     <Compile Include="Repositories\IInsurenceRepository.cs" />
     <Compile Include="Repositories\IJobRepository.cs" />
+    <Compile Include="Repositories\IKlinikRepository.cs" />
     <Compile Include="Repositories\IKlinikServicesRepository.cs" />
     <Compile Include="Repositories\ISexRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Services\GenericRepositoy.cs" />
     <Compile Include="Services\InsurenceRepository.cs" />
     <Compile Include="Services\JobRepository.cs" />
+    <Compile Include="Services\KlinikRepository.cs" />
     <Compile Include="Services\KlinikServicesRepository.cs" />
     <Compile Include="Services\SexRepository.cs" />
     <Compile Include="Services\UserRepository.cs" />
