--- a/Innobedded.KrankenHause.Domain/Innobedded.KrankenHause.Domain.csproj
+++ b/Innobedded.KrankenHause.Domain/Innobedded.KrankenHause.Domain.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IAppointmentRepository.cs" />
     <Compile Include="Repositories\IDoctorRepository.cs" />
     <Compile Include="Repositories\IEducationRepository.cs" />
     <Compile Include="Repositories\IFachRepository.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Repositories\IReceptionRepository.cs" />
     <Compile Include="Repositories\ISexRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
+    <Compile Include="Services\AppointmentRepository.cs" />
     <Compile Include="Services\DoctorRepository.cs" />
     <Compile Include="Services\EducationRepository.cs" />
     <Compile Include="Services\FachRepository.cs" />
