Create and update Admin Panel

--- a/Innobedded.KrankenHause.WebSite/Web.config
+++ b/Innobedded.KrankenHause.WebSite/Web.config
@@ -20,10 +20,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <!--<customErrors mode="on" >
+	  <customErrors mode="On" >
 		  <error statusCode="404" redirect="~/Errors/Error404" />
-		  
-	  </customErrors>-->
+		  <error statusCode="500" redirect="/" />
+	  </customErrors>
 	  
 	  
 	  <authentication mode="Forms">
