--- a/Innobedded.KrankenHause.WebSite/Innobedded.KrankenHause.WebSite.csproj
+++ b/Innobedded.KrankenHause.WebSite/Innobedded.KrankenHause.WebSite.csproj
@@ -1050,6 +1050,7 @@
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
+    <Compile Include="Controllers\SuccessController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1188,6 +1189,7 @@
     <Content Include="Views\Doctors\_Doctors.cshtml" />
     <Content Include="Views\Shared\_ServicesDetailsLayout.cshtml" />
     <Content Include="Views\Services\ServiceDetails.cshtml" />
+    <Content Include="Views\Success\Success.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
