Change Web.Config for Connection String Remote Site The End.Afgabe

--- a/Innobedded.KrankenHause.WebSite/Web.config
+++ b/Innobedded.KrankenHause.WebSite/Web.config
@@ -9,10 +9,14 @@
   
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <connectionStrings>
-    <!--DataBase Connection    -->
+  <!--<connectionStrings>
+    --><!--DataBase Connection    --><!--
     <add name="KrankenHausDbContext" connectionString="Data Source=bahman;initial catalog=KrankenHaus;integrated security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
+	<connectionStrings>
+		<!--DataBase Connection    -->
+		<add name="KrankenHausDbContext" connectionString="Data Source=KrankenHaus.mssql.somee.com;Initial Catalog=KrankenHaus;User ID=pourgholami_SQLLogin_1;password=sk9rk7ro6g;integrated security=false" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
